# photo

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  README.md  input.inp  makefile  test.inp  test.txt  test2.inp
Debug/: makefile
deploy/: run_gms.sh  run_xgtopw.sh
deploy/inputs/: basis.inp
deploy/prep/: format_energy.py  format_length.py
deploy/res/: run.sh  run_ci.sh  run_hf.sh  test_R0_ci.inp  test_R0_hf.inp  test_ci.inp  test_hf.inp
deploy/res/outps/: integrate_total_sigma.py  make_plot.py  plot.py
deploy/res/outps/exp_compare/: exp_plot.py
sources/: basis.cpp  basis.h  calculator.cpp  calculator.h  constants.cpp  constants.h  data_holder.cpp  data_holder.h  disk_reader.cpp  disk_reader.h  fun.cpp  fun.h  functions.cpp  functions.h  gamess.cpp  gamess.h  harmonics.cpp  harmonics.h  input_data.cpp  input_data.h  iteration.cpp  iteration.h  iteration_controler.cpp  iteration_controler.h  job_control.cpp  job_control.h  main.cpp  math.cpp  math.h  photo_scf.cpp  photo_scf.h  rec.h  settings.h  two_electron_integrals.cpp  two_electron_integrals.h
